(about) loads url from cfg

--- a/config/about.cfg
+++ b/config/about.cfg
@@ -1,3 +1,4 @@
 content=Swindle is a generic rust bot created by <@162189038965489664> as a small test project. The bot is fully made in rust-nightly and is capable of normal bot behaviors.
 title=Swindle Bot
 thumbnail=https://i.imgur.com/z7j0ehi.png
+url=https://github.com/nomnomab/Swindle-Bot
